--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name = SismosJR
-server.servlet.context-path = /SismosJR
-
-server.port = 8080
+spring.application.name=earthquake-svc
+server.servlet.context-path=/earthquake-svc
+server.port=8096
