--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.0</version>
+		<version>2.6.1</version>
 		<relativePath />
 	</parent>
 
@@ -160,7 +160,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${mvn.surefire.plugin.version}</version>
+				<version>${mvn.surefire.plugin.version}</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<!-- Sets the VM argument line used when unit tests are run. -->
 					<argLine>${surefireArgLine}</argLine>
@@ -175,7 +175,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${mvn.failsafe.plugin.version}</version>
+				<version>${mvn.failsafe.plugin.version}</version><!--$NO-MVN-MAN-VER$-->
 				<executions>
 					<execution>
 						<id>integration-tests</id>
@@ -252,6 +252,7 @@
 				<version>${mvn.format.plugin.version}</version>
 				<configuration>
 					<configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
+					<lineEnding>CRLF</lineEnding>
 				</configuration>
 				<executions>
 					<execution>
