Switch from AOSP style

--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,7 @@
 						<format>
 							<!-- define the files to apply to -->
 							<includes>
+								<include>*.properties</include>
 								<include>*.xml</include>
 							</includes>
 							<trimTrailingWhitespace />
@@ -300,7 +301,6 @@
 					<java>
 						<googleJavaFormat>
 							<version>1.15.0</version>
-							<style>AOSP</style>
 							<reflowLongStrings>true</reflowLongStrings>
 						</googleJavaFormat>
 						<trimTrailingWhitespace />
