add sonar.login to allow on-demand scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=earthquake-svc
 sonar.projectName=earthquake-svc
 sonar.projectVersion=2.0
 
+sonar.login=${env.SONAR_LOGIN_TOKEN}
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.java.source=15
