--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.11</version>
+		<version>2.7.17</version>
 		<relativePath />
 	</parent>
 	<groupId>com.gsdd</groupId>
 	<artifactId>earthquake-svc</artifactId>
-	<version>2.0.1</version>
+	<version>2.0.2</version>
 	<packaging>jar</packaging>
 	<name>earthquake-svc</name>
 	<organization>
@@ -22,19 +22,19 @@
 		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
 		<project.build.targetEncoding>${project.encoding}</project.build.targetEncoding>
 		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
-		<java.version>17</java.version>
-		<mvn.jacoco.plugin.version>0.8.8</mvn.jacoco.plugin.version>
-		<mvn.failsafe.plugin.version>3.0.0-M8</mvn.failsafe.plugin.version>
-		<mvn.surefire.plugin.version>3.0.0-M8</mvn.surefire.plugin.version>
-		<mvn.spotless.plugin.version>2.22.1</mvn.spotless.plugin.version>
-		<mvn.checkstyle.plugin.version>3.2.1</mvn.checkstyle.plugin.version>
-		<mvn.dependency-check.plugin.version>8.0.2</mvn.dependency-check.plugin.version>
-		<mvn.dependency.plugin.version>3.3.0</mvn.dependency.plugin.version>
+		<java.version>21</java.version>
+		<mvn.jacoco.plugin.version>0.8.11</mvn.jacoco.plugin.version>
+		<mvn.failsafe.plugin.version>3.2.2</mvn.failsafe.plugin.version>
+		<mvn.surefire.plugin.version>3.2.2</mvn.surefire.plugin.version>
+		<mvn.spotless.plugin.version>2.40.0</mvn.spotless.plugin.version>
+		<mvn.checkstyle.plugin.version>3.3.1</mvn.checkstyle.plugin.version>
+		<mvn.dependency-check.plugin.version>8.4.3</mvn.dependency-check.plugin.version>
+		<mvn.dependency.plugin.version>3.6.1</mvn.dependency.plugin.version>
 		<!-- If true skips UT test execution -->
 		<skip.unit.tests>false</skip.unit.tests>
 		<!-- If true skips IT test execution -->
 		<skip.integration.tests>true</skip.integration.tests>
-		<checkstyle.version>10.1</checkstyle.version>
+		<checkstyle.version>10.12.5</checkstyle.version>
 		<jsf.api.version>2.2.20</jsf.api.version>
 		<primefaces.version>8.0</primefaces.version>
 		<primefaces.theme.version>1.0.10</primefaces.theme.version>
